# calhacks

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  SETUP.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
apps/api/: Dockerfile  main.py
apps/web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: BackboneViewer.tsx  CandidateTable.tsx  ConfidenceTrack.tsx  CostComparisonChart.tsx  DataProvenance.tsx  Funnel.tsx  InputView.tsx  MolViewer.tsx  ReportView.tsx  SequenceSpaceScatter.tsx  SummaryRow.tsx  Tabs.tsx
apps/web/lib/: api.ts  mockReport.json  plddt.ts  types.ts
