[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dryrun"
version = "0.1.0"
description = "DryRun — an autonomous pre-synthesis experiment-design engine for molecular biology"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "DryRun" }]
dependencies = [
    "pydantic>=2.6",
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "openai>=1.30",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "typer>=0.12",
]

# uagents is only needed for Phase 4 (running the agents). It is intentionally an
# optional extra so the guaranteed-running mock demo (`make install` -> `make demo`
# -> `make web`) installs light and never depends on the agent framework.
[project.optional-dependencies]
agents = ["uagents>=0.18"]

[project.scripts]
dryrun = "dryrun_agents.cli:main"

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5", "httpx>=0.27"]

# Single root distribution maps all three import packages from their monorepo
# locations. Faithful to the documented tree, lower failure-surface than a
# multi-member uv workspace.
[tool.hatch.build.targets.wheel]
packages = [
    "packages/core/dryrun_core",
    "packages/providers/dryrun_providers",
    "packages/agents/dryrun_agents",
]

[tool.pytest.ini_options]
testpaths = ["packages/core/tests", "packages/providers/tests"]
addopts = "-q"
pythonpath = ["."]

[tool.uv]
package = true
